# versor

./: CMakeLists.txt  versor-test.cc  versor.cc  versor.hpp
